--- a/fooking/src/main/webapp/resources/css/style.css
+++ b/fooking/src/main/webapp/resources/css/style.css
@@ -813,7 +813,7 @@
 		padding-top: 50px;
 		padding-bottom: 0px;
 		position: relative;
-		margin-bottom: 50px;
+		margin-bottom:https://files.slack.com/files-pri/T41TKURK4-F5JL7U9HV/20170525_183424.jpg 50px;
 		margin-top: 80px;
 	}
 
